@@ -146,6 +146,7 @@ class TTranslate extends TI18NControl
 		else
 		{
 			$parameters=new TAttributeCollection;
+			$parameters->setCaseSensitive(true);
 			$this->setViewState('Parameters',$parameters,null);
 			return $parameters;
 		}
